Свертстал и адаптировал секцию hero

--- a/src/index.html
+++ b/src/index.html
@@ -1,40 +1,101 @@
 <!doctype html>
 <html lang="ru">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap CSS -->
-    <link href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,
+      initial-scale=1">
+  <!-- Bootstrap CSS -->
+  <link href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
+  <title>Ремонт квартир</title>
+</head>
 
-    <title>Hello, world!</title>
-  </head>
-  <body>
-    <nav class="navbar">
-      <div class="container">
-        <div class="navbar-block">
-          <div class="navbar__logo">
-            <img src="img/logo.png" alt="Логотип">
-          </div>
-          <!-- /.navbar__logo -->
-          <div class="navbar__info">
-            <div class="navbar__contacts">
-              <span class="navbar__address">Калуга, Москва, МО</span> 
-              <!-- /.navbar__address -->
-              <a href="tel:+7(495)42-251-31" class="navbar__phone">+7 (495) 42-251-31</a> 
-              <!-- /.navbar__phone -->
-            </div>
-            <!-- /.navbar__contacts -->
-            <button class="button navbar__button">Перезвоните мне</button>
-          </div>
-          <!-- /.navbar__info -->
+<body>
+  <nav class="navbar">
+    <div class="container">
+      <div class="navbar-block">
+        <div class="navbar__logo">
+          <img src="img/logo.png" alt="Логотип">
         </div>
-        <!-- /.navbar-block -->
+        <!-- /.navbar__logo -->
+        <div class="navbar__info">
+          <div class="navbar__contacts">
+            <span class="navbar__address">Калуга, Москва, МО</span>
+            <!-- /.navbar__address -->
+            <a href="tel:+7(495)42-251-31" class="navbar__phone">
+              +7 (495) 42-251-31
+            </a>
+            <!-- /.navbar__phone -->
+          </div>
+          <!-- /.navbar__contacts -->
+          <button class="button
+              navbar__button">Перезвоните мне</button>
+        </div>
+        <!-- /.navbar__info -->
+      </div>
+      <!-- /.navbar-block -->
+    </div>
+    <!-- /.container -->
+  </nav>
+  <!-- /.navbar -->
+  <main>
+    <section class="hero">
+      <div class="container">
+        <div class="hero-block">
+          <div class="hero-text">
+            <h1 class="hero-text__title">
+              Внутренняя отделка помещений "под ключ"
+            </h1>
+            <!-- /.hero-text__title -->
+            <span class="hero-text__subtitle">
+              с гарантией качества, прописанной в договоре
+            </span>
+            <!-- /.hero-text__subtitle -->
+            <ul class="hero-list">
+              <li class="hero-item">
+                <div class="hero-item__img">
+                  <img src="img/hero/clock.png" alt="clock">
+                </div>
+                <div class="hero-item__text">
+                  Точно соблюдаем сроки
+                </div>
+              </li>
+              <!-- /.hero-item -->
+              <li class="hero-item">
+                <div class="hero-item__img">
+                  <img src="img/hero/calculator.png" alt="calculator">
+                </div>                
+                <div class="hero-item__text">
+                  Рассчитаем смету на работы и материалы в день обращения
+                </div>
+              </li>
+              <!-- /.hero-item -->
+              <li class="hero-item">
+                <div class="hero-item__img">
+                  <img src="img/hero/paint-board.png" alt="paint-board">
+                </div> 
+                <div class="hero-item__text"> 
+                  Предложим более 100 вариантов исполнения дизайна Вашего жилья
+                </div>
+              </li>
+              <!-- /.hero-item -->
+            </ul>
+            <!-- /.hero-list -->
+          </div>
+          <!-- /.hero-text -->
+          <div class="hero-img">
+            <img src="img/hero/hero-image.png" alt="План квартиры">
+          </div>
+          <!-- /.hero-img -->
+        </div>
+        <!-- /.hero-block -->
       </div>
       <!-- /.container -->
-    </nav>
-    <!-- /.navbar -->
-  </body>
+    </section>
+    <!-- /.hero -->
+  </main>
+</body>
+
 </html>
