Подключил шрифты и подогнал стили к макету

--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
                   <img src="img/hero/calculator.png" alt="calculator">
                 </div>                
                 <div class="hero-item__text">
-                  Рассчитаем смету на работы и материалы в день обращения
+                  Рассчитаем смету на работы<br> и материалы в день обращения
                 </div>
               </li>
               <!-- /.hero-item -->
