Сверстан блок предложение дизайна, сделан адаптив, добавлен эффект при наведении

--- a/src/index.html
+++ b/src/index.html
@@ -95,6 +95,44 @@
       <!-- /.container -->
     </section>
     <!-- /.hero -->
+    <section class="section offer">
+      <div class="container">
+        <div class="offer-block">
+          <h2 class="section-title offer__title">
+            Мы бесплатно разработаем дизайн-проект Вашего жилья и реализуем его!
+          </h2>
+          <!-- /.title offer__title -->
+          <span class="section-subtitle offer__subtitle">Оставьте заявку на разработку бесплатного дизайн-проекта!</span>
+          <!-- /.subtitle offer__subtitle -->
+          <form action="#" class="form offer-form">
+            <input type="text" class="input offer__input" placeholder="Ваше имя">
+            <input type="text" class="input offer__input" placeholder="Ваш телефон">
+            <button class="button offer__button">
+              Получить бесплатный дизайн-проект
+            </button>
+            <!-- /.button offer__button -->
+          </form>
+          <!-- /.form offer-form -->
+          <div class="offer-feedback">
+            <span class="offer-feedback__text">
+              Наш менеджер перезвонит Вам в течение 60 секунд
+            </span>
+            <!-- /.feedback__text -->
+            <span class="offer-feedback__text offer-feedback__text_right">
+              или перезвоните нам сами
+              <a href="tel:+7 495 42-251-31" class="offer-feedback__phone">
+                +7 (495) 42-251-31
+              </a>              
+            </span>
+            <!-- /.feedback__text -->
+          </div>
+          <!-- /.offer-feedback -->
+        </div>
+        <!-- /.offer-block -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.section offer -->
   </main>
 </body>
 
