--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,9 @@
       initial-scale=1">
   <!-- Bootstrap CSS -->
   <link href="css/normalize.css">
+  <link rel="stylesheet" type="text/css" href="css/slick.css"/>
+  <link rel="stylesheet" href="css/animate.css">
+  <link rel="stylesheet" href="css/motion.css">
   <link rel="stylesheet" href="css/style.css">
   <title>Ремонт квартир</title>
 </head>
@@ -98,7 +101,7 @@
     <section class="section offer">
       <div class="container">
         <div class="offer-block">
-          <h2 class="section-title offer__title">
+          <h2 id="animation" class="section-title offer__title">
             Мы бесплатно разработаем дизайн-проект Вашего жилья и реализуем его!
           </h2>
           <!-- /.title offer__title -->
@@ -133,7 +136,148 @@
       <!-- /.container -->
     </section>
     <!-- /.section offer -->
+    <section class="section portfolio">
+      <div class="container">
+        <h2 id="animation" class="section-title portfolio__title">
+          Работая с 2007 года, мы сделали более 500 ремонтов в квартирах и домах
+        </h2>
+        <!-- /.section-title portfolio__title -->
+        <div class="slider">
+          <div class="slider__item wow animate__rotateInDownLeft">
+            <img src="img/portfolio/slider-1.jpg" alt="квартира" class="slider__img">
+          </div>
+          <!-- /.slider__item -->
+          <div class="slider__item wow animate__rotateIn">
+            <img src="img/portfolio/slider-2.jpg" alt="квартира" class="slider__img">
+          </div>
+          <!-- /.slider__item -->
+          <div class="slider__item wow animate__rotateInDownRight">
+            <img src="img/portfolio/slider-3.jpg" alt="квартира" class="slider__img">
+          </div>
+          <!-- /.slider__item -->
+          <div class="slider__item">
+            <img src="img/portfolio/slider-1.jpg" alt="квартира" class="slider__img">
+          </div>
+          <!-- /.slider__item -->
+          <div class="slider__item">
+            <img src="img/portfolio/slider-2.jpg" alt="квартира" class="slider__img">
+          </div>
+          <!-- /.slider__item -->
+          <div class="slider__item">
+            <img src="img/portfolio/slider-3.jpg" alt="квартира" class="slider__img">
+          </div>
+          <!-- /.slider__item -->
+        </div>
+        <!-- /.slider -->
+        <div class="arrows portfolio__arrows">
+          <img class="arrows__left wow animate__fadeInLeft" data-wow-duration="2s" src="img/portfolio/left-arrow.png" alt="стрелка">
+          <img class="arrows__right wow animate__fadeInRight" data-wow-duration="2s" src="img/portfolio/right-arrow.png" alt="стрелка">
+        </div>
+        <!-- /.arrows portfolio__arrows -->
+      </div>
+    </section>
+    <!-- /.section section-portfolio -->
+    <section class="section price">
+      <div class="container">
+        <h2 id="animation" class="section-title price__title">
+          У нас очень гибкая система скидок на комплексные работы!
+        </h2>
+        <!-- /.section-title price__title -->
+        <span class="section-subtitle price__subtitle">Прайс на наши услуги</span>
+        <!-- /.section-subtitle price__subtitle -->
+        <div class="cards">
+          <div class="card price__card wow animate__fadeInUp"data-wow-delay="0.1s" data-wow-duration="1.2s">
+            <div class="card-wrap__img">
+              <img class="card__img" src="img/price/card-1.jpg" alt="Bathroom">
+            </div>
+            <!-- /.card-wrap__img -->
+            <div class="card__text">
+              <h4 class="card__title">Ремонт ванных комнат и с/у</h4>
+              <!-- /.card__text -->
+              <a href="#" class="card__link">Узнать цены</a>
+            </div>
+            <!-- /.card__text -->
+             <!-- /.card__link -->
+          </div>
+          <!-- /.card -->
+          <div class="card price__card wow animate__fadeInUp" data-wow-delay="0.2s" data-wow-duration="1.2s">
+            <div class="card-wrap__img">
+              <img class="card__img" src="img/price/card-2.jpg" alt="Living room">
+            </div>
+            <!-- /.card-wrap__img -->
+            <div class="card__text">
+              <h4 class="card__title">Ремонт комнат и квартир</h4>
+            <!-- /.card__text -->
+            <a href="#" class="card__link">Узнать цены</a>
+             <!-- /.card__link -->
+            </div>
+            <!-- /.card__text -->            
+          </div>
+          <!-- /.card -->
+          <div class="card price__card wow animate__fadeInUp" data-wow-delay="0.3s" data-wow-duration="1.2s">
+            <div class="card-wrap__img">
+              <img class="card__img" src="img/price/card-3.jpg" alt="Office">
+            </div>
+            <!-- /.card-wrap__img -->
+            <div class="card__text">
+              <h4 class="card__title">Отделка офисных помещений</h4>
+            <!-- /.card__text -->
+            <a href="#" class="card__link">Узнать цены</a>
+             <!-- /.card__link -->
+            </div>
+            <!-- /.card__text -->            
+          </div>
+          <!-- /.card -->
+          <div class="card price__card wow animate__fadeInUp" data-wow-delay="0.1s" data-wow-duration="1.2s">
+            <div class="card-wrap__img">
+              <img class="card__img" src="img/price/card-4.jpg" alt="Building">
+            </div>
+            <!-- /.card-wrap__img -->
+            <div class="card__text">
+              <h4 class="card__title">Ремонт в новостройках</h4>
+              <!-- /.card__text -->
+              <a href="#" class="card__link">Узнать цены</a>
+              <!-- /.card__link -->
+            </div>
+            <!-- /.card__text -->            
+          </div>
+          <!-- /.card -->
+          <div class="card price__card wow animate__fadeInUp" data-wow-delay="0.2s" data-wow-duration="1.2s">
+            <div class="card-wrap__img">
+              <img class="card__img" src="img/price/card-5.jpg" alt="Kitchen">
+            </div>
+            <!-- /.card-wrap__img -->
+            <div class="card__text">
+              <h4 class="card__title">Ремонт кухонь</h4>
+              <!-- /.card__text -->
+              <a href="#" class="card__link">Узнать цены</a>
+              <!-- /.card__link -->
+            </div>            
+          </div>
+          <!-- /.card -->
+          <div class="card price__card wow animate__fadeInUp" data-wow-delay="0.3s" data-wow-duration="1.2s">
+            <div class="card-wrap__img">
+              <img class="card__img" src="img/price/card-6.jpg" alt="Cottage">
+            </div>
+            <!-- /.card-wrap__img -->
+            <div class="card__text">
+              <h4 class="card__title">Ремонт дач и коттеджей</h4>
+              <!-- /.card__text -->
+              <a href="#" class="card__link">Узнать цены</a>            
+              <!-- /.card__link -->
+            </div>
+          </div>
+          <!-- /.card -->
+        </div>
+        <!-- /.cards -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.section price -->    
   </main>
 </body>
-
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script type="text/javascript" src="js/slick.min.js"></script>
+<script src="js/wow.min.js"></script>
+<script src="js/main.js"></script>
 </html>
