Сверстал блок с пятью шагами до ремонта, адаптировал его

--- a/src/index.html
+++ b/src/index.html
@@ -273,7 +273,73 @@
       </div>
       <!-- /.container -->
     </section>
-    <!-- /.section price -->    
+    <!-- /.section price --> 
+    <section class="section programm">
+      <div class="container">
+        <h2 class="section-title programm__title">Наши специалисты готовы выехать на замер в любое удобное для Вас время
+          </h2>
+        <!-- /.section-title programm__title -->
+        <span class="section-subtitle programm__subtitle">5 шагов до ремонта</span>
+        <!-- /.section-subtitle programm__subtitle -->
+        <div class="steps">
+          <div class="step">
+            <div class="step__icon">
+              <img src="img/programm/woman.png" alt="woman" class="step__img">
+            </div>
+            <!-- /.step__icon -->
+            <span class="step__text">Вы звоните нам или оставляете заявку</span>
+            <!-- /.step__text -->
+          </div>
+          <!-- /.step -->
+          <div class="step">
+            <div class="step__icon">
+              <img src="img/programm/clock.png" alt="clock" class="step__img">
+            </div>
+            <!-- /.step__icon -->
+            <span class="step__text">Согласуем удобное для Вас время выезда специалиста на замер</span>
+            <!-- /.step__text -->
+          </div>
+          <!-- /.step -->
+          <div class="step">
+            <div class="step__icon">
+              <img src="img/programm/money.png" alt="money" class="step__img">
+            </div>
+            <!-- /.step__icon -->
+            <span class="step__text">Рассчитываем смету согласовываем с Вами</span>
+            <!-- /.step__text -->
+          </div>
+          <!-- /.step -->
+          <div class="step">
+            <div class="step__icon">
+              <img src="img/programm/document.png" alt="document" class="step__img">
+            </div>
+            <!-- /.step__icon -->
+            <span class="step__text">Подписываем договор закупаем материал по оптовым ценам</span>
+            <!-- /.step__text -->
+          </div>
+          <!-- /.step -->
+          <div class="step">
+            <div class="step__icon">
+              <img src="img/programm/calendar.png" alt="calendar" class="step__img">
+            </div>
+            <!-- /.step__icon -->
+            <span class="step__text">Выполняем ремонт в указанные сроки</span>
+            <!-- /.step__text -->
+          </div>
+          <!-- /.step -->
+        </div>
+        <!-- /.steps -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.section program -->  
+    <section class="section split">
+      <div class="container">
+        <span class="split__text">Ремонт обойдется Вам дешевле, так как мы используем качественные материалы по оптовым ценам</span> <!-- /.split__text -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.section split -->
   </main>
 </body>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
