--- a/src/index.html
+++ b/src/index.html
@@ -143,15 +143,15 @@
         </h2>
         <!-- /.section-title portfolio__title -->
         <div class="slider">
-          <div class="slider__item wow animate__rotateInDownLeft">
+          <div class="slider__item wow animate__zoomIn">
             <img src="img/portfolio/slider-1.jpg" alt="квартира" class="slider__img">
           </div>
           <!-- /.slider__item -->
-          <div class="slider__item wow animate__rotateIn">
+          <div class="slider__item wow animate__zoomIn">
             <img src="img/portfolio/slider-2.jpg" alt="квартира" class="slider__img">
           </div>
           <!-- /.slider__item -->
-          <div class="slider__item wow animate__rotateInDownRight">
+          <div class="slider__item wow animate__zoomIn">
             <img src="img/portfolio/slider-3.jpg" alt="квартира" class="slider__img">
           </div>
           <!-- /.slider__item -->
@@ -283,7 +283,7 @@
         <!-- /.section-subtitle programm__subtitle -->
         <div class="steps">
           <div class="step">
-            <div class="step__icon">
+            <div class="step__icon wow animate__zoomIn">
               <img src="img/programm/woman.png" alt="woman" class="step__img">
             </div>
             <!-- /.step__icon -->
@@ -292,7 +292,7 @@
           </div>
           <!-- /.step -->
           <div class="step">
-            <div class="step__icon">
+            <div class="step__icon wow animate__zoomIn">
               <img src="img/programm/clock.png" alt="clock" class="step__img">
             </div>
             <!-- /.step__icon -->
@@ -301,16 +301,16 @@
           </div>
           <!-- /.step -->
           <div class="step">
-            <div class="step__icon">
+            <div class="step__icon wow animate__zoomIn">
               <img src="img/programm/money.png" alt="money" class="step__img">
             </div>
             <!-- /.step__icon -->
-            <span class="step__text">Рассчитываем смету согласовываем с Вами</span>
+            <span class="step__text">Рассчитываем смету согласовываем<br> с Вами</span>
             <!-- /.step__text -->
           </div>
           <!-- /.step -->
           <div class="step">
-            <div class="step__icon">
+            <div class="step__icon wow animate__zoomIn">
               <img src="img/programm/document.png" alt="document" class="step__img">
             </div>
             <!-- /.step__icon -->
@@ -319,7 +319,7 @@
           </div>
           <!-- /.step -->
           <div class="step">
-            <div class="step__icon">
+            <div class="step__icon wow animate__zoomIn">
               <img src="img/programm/calendar.png" alt="calendar" class="step__img">
             </div>
             <!-- /.step__icon -->
@@ -335,11 +335,84 @@
     <!-- /.section program -->  
     <section class="section split">
       <div class="container">
-        <span class="split__text">Ремонт обойдется Вам дешевле, так как мы используем качественные материалы по оптовым ценам</span> <!-- /.split__text -->
+        <span class="split__text">Ремонт обойдется Вам дешевле, так как<br> мы используем качественные материалы по оптовым ценам</span> <!-- /.split__text -->
       </div>
       <!-- /.container -->
     </section>
     <!-- /.section split -->
+    <section class="section help">
+      <div class="container">
+        <div class="block help__block">
+          <div class="block__item">
+            <span class="block__text">Поможем закупить все материалы по оптовым ценам у проверенных поставщиков </span>          
+            <!-- /.block__text -->
+            <div class="block-wrap-img">
+              <img class="block__img" src="img/help/buying.png" alt="Закупка">
+            </div>
+            <!-- /.block__img -->
+          </div>
+          <!-- /.block__item -->
+          <div class="block__item">
+            <span class="block__text">Мы дадим Вам <strong>максимальные скидки</strong> у наших партнеров для закупки материалов оптом</span>
+            <!-- /.block__text -->
+            <div class="block-wrap-img">
+              <img class="block__img" src="img/help/discounts.png" alt="Скидки">
+            </div>
+            <!-- /.block__img -->
+          </div>
+          <!-- /.block__item -->
+          <div class="block__item">
+            <span class="block__text">Все, что не сможете найти в городе - поможем заказать <strong>у проверенных поставщиков</strong></span>
+            <!-- /.block__text -->
+            <div class="block-wrap-img">
+              <img class="block__img" src="img/help/provider.png" alt="Поставщики">
+            </div>
+            <!-- /.block__img -->
+          </div>
+          <!-- /.block__item -->
+        </div>
+        <!-- /.block help__block -->
+      </div>
+    </section>
+    <!-- /.section help -->
+    <section class="section guarantee">
+      <div class="container">
+        <h2 class="section-title guarantee__title">Все наши гарантийные обязательства подробно и прозрачно описаны в договоре</h2>
+        <!-- /.section-title guarantee__title -->
+        <div class="guarantee__block">
+          <div class="guarantee__item">
+            <div class="guarantee__img">
+              <img src="img/guarantee/page-11.jpg" alt="Страница договора">
+            </div>
+            <!-- /.guarantee__img -->
+            <span class="guarantee__text">Гарантия на качество выполняемых работ </span>
+            <!-- /.guarantee__text -->
+          </div>
+          <!-- /.guarantee__item -->
+          <div class="guarantee__item">
+            <div class="guarantee__img">
+              <img src="img/guarantee/page-2.jpg" alt="Страница договора">
+            </div>
+            <!-- /.guarantee__img -->
+            <span class="guarantee__text">Гарантия на фиксированные цены Виды работ и цены на них прописаны в договоре</span>
+            <!-- /.guarantee__text -->
+          </div>
+          <!-- /.guarantee__item -->
+          <div class="guarantee__item">
+            <div class="guarantee__img">
+              <img src="img/guarantee/page-33.jpg" alt="Страница договора">
+            </div>
+            <!-- /.guarantee__img -->
+            <span class="guarantee__text">Гарантия на точное соблюдение сроков и ответственность за их невыполнение</span>
+            <!-- /.guarantee__text -->
+          </div>
+          <!-- /.guarantee__item -->
+        </div>
+        <!-- /.guarantee__block -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.section guarantee -->
   </main>
 </body>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
