--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
             <span class="hero-text__subtitle">
               с гарантией качества, прописанной в договоре
             </span>
-            <!-- /.hero-text__subtitle -->
+            <! - /.hero-text__subtitle ->
             <ul class="hero-list">
               <li class="hero-item">
                 <div class="hero-item__img">
@@ -343,7 +343,7 @@
     <section class="section help">
       <div class="container">
         <div class="block help__block">
-          <div class="block__item">
+          <div class="block__item wow animate__jackInTheBox">
             <span class="block__text">Поможем закупить все материалы по оптовым ценам у проверенных поставщиков </span>          
             <!-- /.block__text -->
             <div class="block-wrap-img">
@@ -352,7 +352,7 @@
             <!-- /.block__img -->
           </div>
           <!-- /.block__item -->
-          <div class="block__item">
+          <div class="block__item wow animate__jackInTheBox">
             <span class="block__text">Мы дадим Вам <strong>максимальные скидки</strong> у наших партнеров для закупки материалов оптом</span>
             <!-- /.block__text -->
             <div class="block-wrap-img">
@@ -361,7 +361,7 @@
             <!-- /.block__img -->
           </div>
           <!-- /.block__item -->
-          <div class="block__item">
+          <div class="block__item wow animate__jackInTheBox">
             <span class="block__text">Все, что не сможете найти в городе - поможем заказать <strong>у проверенных поставщиков</strong></span>
             <!-- /.block__text -->
             <div class="block-wrap-img">
@@ -381,7 +381,7 @@
         <!-- /.section-title guarantee__title -->
         <div class="guarantee__block">
           <div class="guarantee__item">
-            <div class="guarantee__img">
+            <div class="guarantee__img wow animate__zoomIn">
               <img src="img/guarantee/page-11.jpg" alt="Страница договора">
             </div>
             <!-- /.guarantee__img -->
@@ -390,7 +390,7 @@
           </div>
           <!-- /.guarantee__item -->
           <div class="guarantee__item">
-            <div class="guarantee__img">
+            <div class="guarantee__img wow animate__zoomIn">
               <img src="img/guarantee/page-2.jpg" alt="Страница договора">
             </div>
             <!-- /.guarantee__img -->
@@ -399,7 +399,7 @@
           </div>
           <!-- /.guarantee__item -->
           <div class="guarantee__item">
-            <div class="guarantee__img">
+            <div class="guarantee__img wow animate__zoomIn">
               <img src="img/guarantee/page-33.jpg" alt="Страница договора">
             </div>
             <!-- /.guarantee__img -->
@@ -413,6 +413,65 @@
       <!-- /.container -->
     </section>
     <!-- /.section guarantee -->
+    <section class="section brif">
+      <div class="container">
+        <div class="brif-block">
+          <div class="interview brif__interview">
+            <h3 class="interview__title">Мы можем озвучить Вам примерную стоимость работы и материалов по телефону</h3>
+            <!-- /.interview__title -->
+            <span class="interview__subtitle">Для этого нужно ответить на 4 вопроса:</span>
+            <!-- /.interview__subtitle -->
+            <ul class="interview-list">
+              <li class="interview-list__item">
+                <span class="interview-list__counter">1.</span>
+                <!-- /.interview-list__counter -->
+                <span class="interview-list__text">Какова площадь помещения?</span>
+                <!-- /.interview-list__text -->
+              </li>
+              <!-- /.interview-list__item -->
+              <li class="interview-list__item">
+                <span class="interview-list__counter">2.</span>
+                <!-- /.interview-list__counter -->
+                <span class="interview-list__text">У Вас новостройка или вторичное жилье?</span>
+                <!-- /.interview-list__text -->
+              </li>
+              <!-- /.interview-list__item -->
+              <li class="interview-list__item">
+                <span class="interview-list__counter">3.</span>
+                <!-- /.interview-list__counter -->
+                <span class="interview-list__text">Где находится помещение, в котором будет производиться ремонт?</span>
+                <!-- /.interview-list__text -->
+              </li>
+              <!-- /.interview-list__item -->
+              <li class="interview-list__item">
+                <span class="interview-list__counter">4.</span>
+                <!-- /.interview-list__counter -->
+                <span class="interview-list__text">Назначение помещения?</span>
+                <!-- /.interview-list__text -->
+              </li>
+              <!-- /.interview-list__item -->
+            </ul>
+            <!-- /.interview-list -->
+          </div>
+          <!-- /.brif-interview -->
+          <div class="form brif-form">
+            <h3 class="brif__title">Оставьте заявку на бесплатный расчет ремонта по телефону</h3>
+            <span class="brif__subtitle">Для этого заполните форму ниже</span>
+            <form action="#">
+              <input type="text" class="input brif__input" placeholder="Ваше имя">
+              <input type="tel" class="input brif__input" placeholder="Ваш телефон">
+              <button class="button brif__button">Рассчитать стоимость</button>
+              <!-- /.button brif__button -->
+              <span class="brif__description">Мы перезвоним Вам в течение 60 секунд</span>
+            </form>
+          </div>
+          <!-- /.form brif-form -->
+        </div>
+        <!-- /.brif-block -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.section brif -->
   </main>
 </body>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
